--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -29,10 +29,10 @@ aws_dockercfg:
   encrypted_env_file: aws-deployment.env.encrypted
    
 awsdeployment:
-  image: codeship/aws-deployment
-  dockerfile_path: Dockerfile.aws
+  build:
+    image: codeship/aws-deployment
+    path: ./deployment
+    dockerfile_path: Dockerfile
   encrypted_env_file: aws-deployment.env.encrypted
-  environment:
-    - AWS_DEFAULT_REGION=us-east-1
-  volumes_from:
-    - demo
+  volumes:
+    - ./deployment:/deploy
