steps file updated with base image build

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -15,6 +15,9 @@
     #     service: demo
     #     command: bundle exec ruby read.rb
 
+- name: Build Base Image
+  service: base
+	
 - name: Test
   type: parallel
   steps:
