--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -29,10 +29,10 @@ redis:
 postgres:
    image: postgres:9.3.6
 
-aws_dockercfg:
-  image: codeship/aws-ecr-dockercfg-generator
-  add_docker: true
-  encrypted_env_file: aws-deployment.env.encrypted
+#aws_dockercfg:
+#  image: codeship/aws-ecr-dockercfg-generator
+#  add_docker: true
+#  encrypted_env_file: aws-deployment.env.encrypted
    
 awsdeployment:
   build:
