--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,18 +9,6 @@
     - name: test
       service: demo
       command: bundle exec ruby test.rb
-    # - type: serial
-    #   steps:
-    #   - name: volumes_in
-    #     service: demo
-    #     command: bundle exec ruby write.rb
-    #   - name: volumes_out
-    #     service: demo
-    #     command: bundle exec ruby read.rb
-
-- name: Test
-  type: parallel
-  steps:
     - name: Test Deployment
       type: serial
       service: awsdeployment
@@ -32,15 +20,24 @@
           type: parallel
           steps:
           - name: S3, LS
-            command: aws s3 ls s3://elasticbeanstalk-us-east-1-398437307342
+            command: aws s3 ls s3://codeshipci-aws
 #          - name: S3, CP Archive
 #            command: aws s3 cp /deploy/tmp/upload_to_s3.zip s3://elasticbeanstalk-us-east-1-398437307342
           - name: S3, CP
-            command: aws s3 cp /deploy/test/upload_to_s3 s3://elasticbeanstalk-us-east-1-398437307342
+            command: aws s3 cp /deploy/test/upload_to_s3 s3://codeshipci-aws
 #          - name: Elastic Beanstalk
 #            command: /deploy/test/elastic_beanstalk/integration-test
 #          - name: Code Deploy
 #            command: /deploy/test/code_deploy/integration-test
+
+    # - type: serial
+    #   steps:
+    #   - name: volumes_in
+    #     service: demo
+    #     command: bundle exec ruby write.rb
+    #   - name: volumes_out
+    #     service: demo
+    #     command: bundle exec ruby read.rb
 
 #- name: Test Deployment
 #  type: parallel
